--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -450,46 +450,9 @@
 			</form>
 		</div>
 
-		<!-- <nav class="header__nav">
-			<button class="header__button-bottom header__button_type_home" type="button">
-				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#home"></use>
-				</svg>
-				Главная
-			</button>
-
-			<button class="middle_media_mobile header__button-bottom" type="button"> -->
-		<!-- <form action="" class="search-box search-box_media_mobile" method="post">
-					<input type="text" class="input input_media_mobile" name="text" value="" id="search">
-					<label class="middle__label middle__label_media_mobile" for="search">Поиск</label>
-					<button type="button" class="btn btn_media_mobile" name="button"></button>
-				</form> -->
-		<!-- <svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#searchBac"></use>
-				</svg>
-				Поиск
-			</button>
-
-
-
-			<button class="header__button-bottom header__button_type_profile" type="button">
-				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#profile"></use>
-				</svg>
-				Профиль
-			</button>
-
-			<button class="header__button-bottom header__button_type_menu" type="button">
-				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#menu"></use>
-				</svg>
-				Меню
-			</button>
-		</nav> -->
-
 	</header>
 
-	<article class="filter education__filter container">
+	<form class="filter education__filter container">
 		<div class="filter__box">
 
 			<a class="back" href="/">
@@ -538,103 +501,103 @@
 
 				<div class="filter__all">
 					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 						<span class="tag__box">Altcoin</span>
 					</label>
 
 					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 						<span class="tag__box">Binance</span>
 					</label>
 
 					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 						<span class="tag__box">Биткоин</span>
 					</label>
 
 					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 						<span class="tag__box">Блокчейн</span>
 					</label>
 
 					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 						<span class="tag__box">Консенсус</span>
 					</label>
 
 					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 						<span class="tag__box">DeFi</span>
 					</label>
 
 					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 						<span class="tag__box">Технический анализ</span>
 					</label>
 
 					<label class="tag">
-						<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+						<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 						<span class="tag__box">Еще+12</span>
 					</label>
 
 					<div class="filter__all-desktop">
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Технологии</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Технический анализ</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Криптография</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Экономика</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Торговля</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Ethereum</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Приватность</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Майнинг</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Metaverse</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">История</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Консенсус</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input" type="checkbox" name="color" value="indigo">
+							<input class="visually-hidden tag__input" type="checkbox" name="tag" value="indigo">
 							<span class="tag__box">Основы</span>
 						</label>
 					</div>
@@ -642,59 +605,59 @@
 			</div>
 
 			<div class="filter__level-inner">
-				<div class="filter__level">
-					<h2 class="text">
+				<fieldset class="fieldset filter__level">
+					<legend class="text">
 						Уровень
-					</h2>
-					<div class="filter__level-wrap">
+					</legend>
 
+					<div class="filter__level-wrap">
 						<label class="tag">
-							<input class="visually-hidden tag__input tag__input_level_beginner" type="checkbox" name="color"
+							<input class="visually-hidden tag__input tag__input_level_beginner" type="checkbox" name="level"
 								value="indigo">
 							<span class="tag__box tag__box_level_beginner">Новичек</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input tag__input_level_advanced" type="checkbox" name="color"
+							<input class="visually-hidden tag__input tag__input_level_advanced" type="checkbox" name="level"
 								value="indigo">
 							<span class="tag__box tag__box_level_advanced">Продвинутый</span>
 						</label>
 
 						<label class="tag">
-							<input class="visually-hidden tag__input tag__input_level_professional" type="checkbox" name="color"
+							<input class="visually-hidden tag__input tag__input_level_professional" type="checkbox" name="level"
 								value="indigo">
 							<span class="tag__box tag__box_level_professional">Профессионал</span>
 						</label>
 					</div>
-				</div>
-				<h2 class="text">
-					Время прочтения
-				</h2>
+				</fieldset>
 
+				<fieldset class="fieldset">
+					<legend class="text">
+						Время прочтения
+					</legend>
 
-
-				<div class="filter__time">
-
-					<div class="filter-range">
-						<div id="nonlinear" class="noUi-target noUi-ltr noUi-horizontal"></div>
-
-						<div class="filter__clock">
-							<span class="filter__clock_range_min"> 1m </span>
-							<span class="filter__clock_range_2m"> 3m </span>
-							<span class="filter__clock_range_3m"> 5m </span>
-							<span class="filter__clock_range_4m"> 10m </span>
-							<span class="filter__clock_range_5m"> 15m </span>
-							<span class="filter__clock_range_6m"> 20m </span>
-							<span class="filter__clock_range_max"> ∞ </span>
+					<div class="filter__time">
+						<div class="filter-range">
+							<div id="nonlinear" class="noUi-target noUi-ltr noUi-horizontal"></div>
+							<div class="filter__clock">
+								<span class="filter__clock_range_min"> 1m </span>
+								<span class="filter__clock_range_2m"> 3m </span>
+								<span class="filter__clock_range_3m"> 5m </span>
+								<span class="filter__clock_range_4m"> 10m </span>
+								<span class="filter__clock_range_5m"> 15m </span>
+								<span class="filter__clock_range_6m"> 20m </span>
+								<span class="filter__clock_range_max"> ∞ </span>
+							</div>
 						</div>
-					</div>
 
-					<span id="slider-snap-value-lower"></span>
-					<span id="slider-snap-value-upper"></span>
-				</div>
+						<span id="slider-snap-value-lower"></span>
+						<span id="slider-snap-value-upper"></span>
+					</div>
+				</fieldset>
 			</div>
 		</div>
-	</article>
+		</а>
+	</form>
 
 	<div class="filter__bottom">
 		<div class="filter__bottom-inner container">
