--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -599,7 +599,7 @@
 			<h2 class="title title_size_small">
 				Последние выпуски
 			</h2>
-			<a class="link last__link" href="">
+			<a class="link text last__link" href="">
 				Смотреть все
 			</a>
 		</div>
@@ -765,62 +765,102 @@
 		</div>
 	</section>
 
-	<section class="nav">
-		<div class="container">
-			<h2 class="title nav__title">
-				Изучайте интерестные темы, пользуйтесь нашей навигацией
-			</h2>
-			<div class="nav__topic">
-				<h3 class="title nav__topic-title">
-					Темы
-				</h3>
-				<div class="nav__topic-wrap">
-					<a class="button nav__button-link" href="">
-						Altcoin
-					</a>
-					<a class="button nav__button-link" href="">
-						Binance
-					</a>
-					<a class="button nav__button-link" href="">
-						Биткоин
-					</a>
-					<a class="button nav__button-link" href="">
-						Блокчейн
-					</a>
-					<a class="button nav__button-link" href="">
-						Консенсус
-					</a>
-					<a class="button nav__button-link" href="">
-						DeFi
-					</a>
-					<a class="button nav__button-link" href="">
-						Технический анализ
-					</a>
-					<a class="button nav__button-link" href="">
-						Еще+12
-					</a>
-				</div>
+	<section class="nav container">
+
+		<h2 class="title nav__title">
+			Изучайте интерестные темы, пользуйтесь нашей навигацией
+		</h2>
+		<div class="nav__topic">
+			<h3 class="text text_size_normal nav__tipick-title">
+				Темы
+			</h3>
+			<div class="nav__topic-wrap">
+				<a class="button nav__button-link" href="">
+					Altcoin
+				</a>
+				<a class="button nav__button-link" href="">
+					Binance
+				</a>
+				<a class="button nav__button-link" href="">
+					Биткоин
+				</a>
+				<a class="button nav__button-link" href="">
+					Блокчейн
+				</a>
+				<a class="button nav__button-link" href="">
+					Консенсус
+				</a>
+				<a class="button nav__button-link" href="">
+					DeFi
+				</a>
+				<a class="button nav__button-link" href="">
+					Технический анализ
+				</a>
+				<a class="button nav__button-link" href="">
+					Altcoin
+				</a>
+				<a class="button nav__button-link" href="">
+					Binance
+				</a>
+				<a class="button nav__button-link" href="">
+					Биткоин
+				</a>
+				<a class="button nav__button-link" href="">
+					Блокчейн
+				</a>
+				<a class="button nav__button-link" href="">
+					Консенсус
+				</a>
+				<a class="button nav__button-link" href="">
+					DeFi
+				</a>
+				<a class="button nav__button-link" href="">
+					Технический анализ
+				</a>
+				<a class="button nav__button-link" href="">
+					Altcoin
+				</a>
+				<a class="button nav__button-link" href="">
+					Binance
+				</a>
+				<a class="button nav__button-link" href="">
+					Биткоин
+				</a>
+				<a class="button nav__button-link" href="">
+					Блокчейн
+				</a>
+				<a class="button nav__button-link" href="">
+					Консенсус
+				</a>
+				<a class="button nav__button-link" href="">
+					DeFi
+				</a>
+				<a class="button nav__button-link" href="">
+					Технический анализ
+				</a>
+				<a class="button nav__button-link" href="">
+					Еще+12
+				</a>
 			</div>
-
-			<div class="nav__level">
-
-				<h3 class="title nav__topic-title">
-					Уровень
-				</h3>
-				<div class="filter__level-wrap">
-					<a class="link link_level_new" href="#">
-						Новичек
-					</a>
-					<a class="link link_level_advanced" href="#">
-						Продвинутый
-					</a>
-					<a class="link link_level_pro" href="#">
-						Профессионал
-					</a>
-				</div>
-			</div>
-
 		</div>
+
+		<div class="nav__level">
+			<h3 class="text text_size_normal nav__topick-title">
+				Уровень
+			</h3>
+			<div class="filter__level-wrap nav__level-wrapper">
+				<a class="link link_level_new" href="#">
+					Новичек
+				</a>
+				<a class="link link_level_advanced" href="#">
+					Продвинутый
+				</a>
+				<a class="link link_level_pro" href="#">
+					Профессионал
+				</a>
+			</div>
+		</div>
+
 	</section>
 
 	<section class="popular">
@@ -830,12 +870,13 @@
 					Популярные
 					статьи “Основы”
 				</h2>
-				<a class="link popular__top-link" href="">
+				<a class="link text last__link" href="">
 					Смотреть все
 				</a>
 			</div>
 
 			<div class="popular__content">
+
 				<div class="main-card main-card_height_large popular__grid-item1">
 					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 						<a class="button main-card__tag" href="#">
@@ -969,7 +1010,7 @@
 
 					<h2 class="title main-card__title popular__main-card-title ">
 						<a class="link main-card__title-link" href="#">
-						История цен биткоина
+							История цен биткоина
 						</a>
 					</h2>
 
@@ -1056,17 +1097,19 @@
 					</a>
 				</div>
 
-				<div class="main-card study__main-card">
-					<div class="main-card__link">
-						<a class="button main-card__button" href="#">
+				<div class="main-card main-card_height_large study__card">
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+						<a class="button main-card__tag" href="#">
 							Глоссарий
 						</a>
 					</div>
 					<h2 class="title study-main-card__title">
-						Initial Coin
-						Offering (ICO)
+						<a class="link main-card__title-link" href="#">
+							Initial Coin
+							Offering (ICO)
+						</a>
 					</h2>
-					<p class="text study__text">
+					<p class="text main-card__text">
 						Инновационный подход к привлечению средств за счет использования цифровых валют (криптовалют). Такая
 						стратегия более распространена в криптовалютных проектах, которые еще не полностью разработали свой продукт,
 						услугу или платформу на основе блокчейна.
@@ -1076,21 +1119,23 @@
 					</a>
 				</div>
 
-				<div class="main-card study__main-card">
-					<div class="main-card__link">
-						<a class="button main-card__button" href="#">
+				<div class="main-card main-card_height_large study__card">
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+						<a class="button main-card__tag" href="#">
 							Глоссарий
 						</a>
 					</div>
 					<h2 class="title study-main-card__title">
-						Proof of Attendance
-						Protocol (POAP)
+						<a class="link main-card__title-link" href="#">
+							Proof of Attendance
+							Protocol (POAP)
+						</a>
 					</h2>
-					<p class="text study__text">
+					<p class="text main-card__text">
 						Система стейкинга NFT-keys, что делает обладателей ключей не только ценными членами сообщества, но и
 						инвесторами на самой ранней стадии
 					</p>
-					<a class="link main-card__link-btn" href="">
+					<a class="link main-card__link-btn" href="#">
 						Полное определение
 					</a>
 				</div>
