--- a/source/markup/auth.html
+++ b/source/markup/auth.html
@@ -1,293 +1,29 @@
 <!DOCTYPE html>
-<html lang="ru" class="page">
+<html class="page" lang="ru">
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Bithoven</title>
 	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
 	<link rel="stylesheet" href="assets/styles/index.css">
 </head>
 
 <body class="page__body">
-
-	<header class="header header_display_non">
-		<div class="header__menu-wrap">
-			<div class="header__menu-top">
-				<div class="header__user-wrap">
-					<button class="button_form_none  header__button-deck" type="button">
-						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#deck"></use>
-						</svg>
-					</button>
-
-					<button class="button_form_none header__button-learn" type="button">
-						Узнать
-					</button>
-
-					<button class="button_form_none header__button-nav " type="button">
-						Темы
-					</button>
-				</div>
-
-					<a class="link logotype" width="126" height="53" href="#главная">
-						<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
-					</a>
-
-				<div class="header__user-nav header__user-nav_media_deck ">
-
-					<button class="button_form_none header__button-onof " type="button">
-						<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#onof"></use>
-						</svg>
-					</button>
-
-
-					<button class="button_form_none header__button-acc" type="button">
-						<svg class="header__svg" width="25" height="25" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#acc"></use>
-						</svg>
-					</button>
-
-
-						<button class="button_form_none header__button-leng header__button-lang--hover" type="button">
-							RU
-
-							<nav class="header-nav__menu">
-								<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
-									<li class="header-nav__item-button">
-										<a class="button header-lang__link-button" href="">
-											English
-										</a>
-									</li>
-
-									<li class="header-nav__item-button">
-										<a class="button header-lang__link-button" href="">
-											Polski
-										</a>
-									</li>
-
-									<li class="header-nav__item-button">
-										<a class="button  header-lang__link-button" href="">
-											繁體中文
-										</a>
-									</li>
-
-									<li class="header-nav__item-button">
-										<a class="button  header-lang__link-button" href="">
-											العربية
-										</a>
-									</li>
-
-									<li class="header-nav__item-button">
-										<a class="button  header-lang__link-button" href="">
-											Русский
-										</a>
-									</li>
-
-									<li class="header-nav__item-button">
-										<a class="button  header-lang__link-button" href="">
-											Türkçe
-										</a>
-									</li>
-
-									<li class="header-nav__item-button">
-										<a class="button  header-lang__link-button" href="">
-											Português
-										</a>
-									</li>
-
-									<li class="header-nav__item-button">
-										<a class="button header-lang__link-button" href="">
-											Svenska
-										</a>
-									</li>
-
-									<li class="header-nav__item-button">
-										<a class="button header-lang__link-button" href="">
-											Bahasa Indonesia
-										</a>
-									</li>
-
-									<li class="header-nav__item-button">
-										<a class="button header-lang__link-button" href="">
-											日本語
-										</a>
-									</li>
-
-									<li class="header-nav__item-button">
-										<a class="button header-lang__link-button" href="">
-											Filipino
-										</a>
-									</li>
-
-									<li class="header-nav__item-button ">
-										<a class="button header-lang__link-button" href="">
-											Українська мова
-										</a>
-									</li>
-
-									<li class="header-nav__item-button ">
-										<a class="button header-lang__link-button" href="">
-											Čeština
-										</a>
-									</li>
-									<li class="header-nav__item-button ">
-										<a class="button header-lang__link-button" href="">
-											Български
-										</a>
-									</li>
-									<li class="header-nav__item-button ">
-										<a class="button header-lang__link-button" href="">
-											اردو
-										</a>
-									</li>
-									<li class="header-nav__item-button ">
-										<a class="button header-lang__link-button" href="">
-											latviešu valoda
-										</a>
-									</li>
-
-								</ul>
-							</nav>
-						</button>
-
-
-					<button class="button_form_none header__button-sedes" type="button">
-						<svg class="header__svg" width="13" height="14" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#sedes"></use>
-						</svg>
-					</button>
-				</div>
-
-				<button class="button button_color_yellow header__aut" type="button">
-					Авторизация
-				</button>
-
-			</div>
-
-			<div class="header__themes--noactive  header__themes_media_desk">
-				<a class="button header__button-link" href="#">
-					Altcoin
-				</a>
-
-				<a class="button header__button-link" href="#">
-					Binance
-				</a>
-
-				<a class="button header__button-link" href="#">
-					Биткоин
-				</a>
-
-				<a class="button header__button-link" href="#">
-					Блокчейн
-				</a>
-
-				<a class="button header__button-link" href="#">
-					Консенсус
-				</a>
-
-				<a class="button header__button-link" href="#">
-					DeFi
-				</a>
-
-				<a class="button header__button-link header__button-link--big" href="#">
-					Технический анализ
-				</a>
-
-				<a class="button header__button-link header__button-link--big" href="#">
-					Еще+12
-				</a>
-			</div>
-
-			<ul class="menu header__bottom">
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Глоссарий
-					</a>
-				</li>
-
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Викторина
-					</a>
-				</li>
-
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Купить криптовалюту
-					</a>
-				</li>
-
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Запуск токена
-					</a>
-				</li>
-
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Платформа
-					</a>
-				</li>
-
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Статьи
-					</a>
-				</li>
-			</ul>
-		</div>
-
-		<nav class="header__nav header__nav_display_non">
-			<button class="button_form_none header__button-bottom header__button_type_home" type="button">
-				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#home"></use>
-				</svg>
-				Главная
-			</button>
-
-			<button class="button_form_none header__button-bottom header__button_type_search" type="button">
-				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#search"></use>
-				</svg>
-				Поиск
-			</button>
-
-			<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
-				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#profile"></use>
-				</svg>
-				Профиль
-			</button>
-
-			<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
-				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
-					<use href="assets/images/svg/sprite.svg#menu"></use>
-				</svg>
-				Меню
-			</button>
-		</nav>
-	</header>
-
 	<section class="auth container">
 		<button class="button_form_none header__button-onof" type="button">
 			<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
 				<use href="assets/images/svg/sprite.svg#onof"></use>
 			</svg>
 		</button>
-
 		<h1 class="title auth__title">
 			Вам нужен кошелек Ethereum,
 			чтобы использовать Bithoven
 		</h1>
-
 		<p class="paragraph auth__paragraph">
 			Подключитесь к одному из наших доступных поставщиков
 			кошельков или создайте новый
 		</p>
-
 		<div class="auth__auth-form">
 			<div class="auth__wrap">
 				<a class="auth__link-wallet auth__link-wallet_subject_metamask">
@@ -295,35 +31,29 @@
 						Meta Mask
 					</p>
 				</a>
-
 				<a class="auth__link-wallet auth__link-wallet_subject_binance">
 					<p class="paragraph">
 						Binance Wallet
 					</p>
 				</a>
-
 				<a class="auth__link-wallet auth__link-wallet_subject_coinbase">
 					<p class="paragraph">
 						Coinbase Wallet
 					</p>
 				</a>
-
 				<a class="auth__link-wallet auth__link-wallet_subject_all">
 					<p class="paragraph">
 						Дополнительно
 					</p>
 				</a>
 			</div>
-
 			<p class="paragraph auth__text">
 				У вас еще нет притокашелька?
 			</p>
-
 			<a class="button auth__button">
 				Как подключить
 			</a>
 		</div>
-
 		<nav class="header__nav">
 			<button class="button_form_none header__button-bottom header__button_type_home" type="button">
 				<svg class="header__svg" width="16" height="17" aria-hidden="true" focusable="false">
@@ -331,21 +61,18 @@
 				</svg>
 				Главная
 			</button>
-
 			<button class="button_form_none header__button-bottom header__button_type_search" type="button">
 				<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#search"></use>
 				</svg>
 				Поиск
 			</button>
-
 			<button class="button_form_none header__button-bottom header__button_type_profile" type="button">
 				<svg class="header__svg" width="19" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#profile"></use>
 				</svg>
 				Профиль
 			</button>
-
 			<button class="button_form_none header__button-bottom header__button_type_menu" type="button">
 				<svg class="header__svg" width="22" height="18" aria-hidden="true" focusable="false">
 					<use href="assets/images/svg/sprite.svg#menu"></use>
@@ -354,7 +81,6 @@
 			</button>
 		</nav>
 	</section>
-
 	<script src="assets/scripts/index.js"></script>
 	<script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
 </body>
