--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -1,455 +1,15 @@
 <!DOCTYPE html>
-<html lang="ru" class="page">
+<html class="page" lang="ru">
 
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Bithoven</title>
 	<link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css" />
-	<link rel="stylesheet" href="assets/styles/nouislider.css">
 	<link rel="stylesheet" href="assets/styles/index.css">
 </head>
 
 <body class="page__body">
-	<header class="header">
-		<header class="header-mobile container ">
-			<div class="content__wrap header-mobile__content">
-
-				<a class="link logotype header-mobile__logotype" width="126" height="53" href="#главная">
-					<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
-				</a>
-
-				<nav class="header-mobile__nav">
-					<button class="button_form_none header-mobile__deck  header__button-deck" type="button">
-						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#deck"></use>
-						</svg>
-					</button>
-
-					<button class="button_form_none header-mobile__lang" type="button">
-						RU
-					</button>
-
-					<div class="middle header-mobile__search">
-						<form class="search-box" action="" method="post">
-							<input class="input header-mobile__input" type="text" name="" value="">
-							<button class="btn header-mobile__btn" type="button" name="button"></button>
-						</form>
-					</div>
-
-					<button class="button_form_none header-mobile__auth" type="button">
-						<svg class="header__svg" width="26" height="15" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#noauth"></use>
-						</svg>
-					</button>
-				</nav>
-			</div>
-		</header>
-
-
-		<div class="header__menu-wrap">
-			<div class="header__menu-top">
-				<div class="header__user-wrap">
-					<button class="button button_form_none  header__button-deck header__button-deck--hover" type="button">
-						<svg class="header__svg" width="22" height="22" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#deck"></use>
-						</svg>
-
-						<nav class="header-nav__menu header-nav__menu_yes">
-							<ul class="menu header-nav">
-								<li class="header-nav__item header-nav__item--bnb">
-									<a class="header-nav__link" href="">
-										Обмен
-										<span class="header-nav__text">
-											Блокчейн и обмен криптоактивами
-										</span>
-									</a>
-								</li>
-
-								<li class="header-nav__item header-nav__item--laba">
-									<a class="header-nav__link" href="">
-										Лаборатория
-										<span class="header-nav__text">
-											Инкубатор для топовых блокчейн-проектов
-										</span>
-									</a>
-								</li>
-
-								<li class="header-nav__item header-nav__item--study">
-									<a class="header-nav__link" href="">
-										Исследование
-										<span class="header-nav__text">
-											Анализ и отчеты на институциональном уровне
-										</span>
-									</a>
-								</li>
-
-								<li class="header-nav__item header-nav__item--bcf">
-									<a class="header-nav__link" href="">
-										BCF
-										<span class="header-nav__text">
-											Благотворительный фонд Blockchain
-										</span>
-									</a>
-								</li>
-
-								<li class="header-nav__item header-nav__item--rocket">
-									<a class="header-nav__link" href="">
-										Панель запуска
-										<span class="header-nav__text">
-											Платформа для запуска токенов
-										</span>
-									</a>
-								</li>
-
-								<li class="header-nav__item header-nav__item--shield">
-									<a class="header-nav__link" href="">
-										Доверительный кошелек
-										<span class="header-nav__text">
-											Официальный криптокошелек Binances
-										</span>
-									</a>
-								</li>
-							</ul>
-						</nav>
-					</button>
-
-					<button class="button_form_none header__button-learn header__button-learn--hover" type="button">
-						Узнать
-
-						<nav class="header-nav__menu">
-							<ul class="menu header-nav header-nav_size_smal">
-								<li class="header-nav__item header-nav__item--glossary">
-									<a class="header-nav__link" href="">
-										Глоссарий
-										<span class="header-nav__text">
-											Глоссарий криптотерминов
-										</span>
-									</a>
-								</li>
-
-								<li class="header-nav__item header-nav__item--game">
-									<a class="header-nav__link" href="">
-										Викторина
-										<span class="header-nav__text">
-											Проходите игровые тесты
-										</span>
-									</a>
-								</li>
-							</ul>
-						</nav>
-					</button>
-
-					<button class="button_form_none header__button-nav header__button-nav--hover" type="button">
-						Темы
-
-						<nav class="header-nav__menu">
-							<ul class="menu header-nav header-nav_size_smal">
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										Altcoin
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										Binance
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										Основы
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										Глоссарий
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										Майнинг
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										Блокчейн
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										Экономика
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										DeFi
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										История
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										Руководство
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-nav__link-button" href="">
-										Биткоин
-									</a>
-								</li>
-
-								<li class="header-nav__item-button ">
-									<a class="button header-nav__link-button button_color_active" href="">
-										Еще
-									</a>
-								</li>
-
-							</ul>
-						</nav>
-					</button>
-				</div>
-
-				<a class="link logotype header__logotype" width="126" height="53" href="#главная">
-					<img class="logotype__image" src="assets/images/logo.svg" alt="Логотип криптоплатформы Bithoven">
-				</a>
-
-
-				<div class="header__user-nav header__user-nav_media_deck ">
-
-					<button class="button_form_none header__button-onof " type="button">
-						<svg class="header__svg" width="18" height="18" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#onof"></use>
-						</svg>
-					</button>
-
-
-					<button class="button_form_none header__button-acc" type="button">
-						<svg class="header__svg header__svg-login" width="25" height="25" aria-hidden="true" focusable="false">
-							<use href="assets/images/svg/sprite.svg#acc"></use>
-						</svg>
-
-						<div class="header__button-login">
-							<img class="header__button-img" src="assets/images/header/account.png" alt="автврка пользователя">
-							<span class="header__button-name">[Vip]</span>
-						</div>
-					</button>
-
-
-					<button class="button_form_none header__button-leng header__button-lang--hover" type="button">
-						RU
-						<nav class="header-nav__menu">
-							<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
-								<li class="header-nav__item-button">
-									<a class="button header-lang__link-button" href="">
-										English
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-lang__link-button" href="">
-										Polski
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button  header-lang__link-button" href="">
-										繁體中文
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button  header-lang__link-button" href="">
-										العربية
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button  header-lang__link-button" href="">
-										Русский
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button  header-lang__link-button" href="">
-										Türkçe
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button  header-lang__link-button" href="">
-										Português
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-lang__link-button" href="">
-										Svenska
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-lang__link-button" href="">
-										Bahasa Indonesia
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-lang__link-button" href="">
-										日本語
-									</a>
-								</li>
-
-								<li class="header-nav__item-button">
-									<a class="button header-lang__link-button" href="">
-										Filipino
-									</a>
-								</li>
-
-								<li class="header-nav__item-button ">
-									<a class="button header-lang__link-button" href="">
-										Українська мова
-									</a>
-								</li>
-
-								<li class="header-nav__item-button ">
-									<a class="button header-lang__link-button" href="">
-										Čeština
-									</a>
-								</li>
-								<li class="header-nav__item-button ">
-									<a class="button header-lang__link-button" href="">
-										Български
-									</a>
-								</li>
-								<li class="header-nav__item-button ">
-									<a class="button header-lang__link-button" href="">
-										اردو
-									</a>
-								</li>
-								<li class="header-nav__item-button ">
-									<a class="button header-lang__link-button" href="">
-										latviešu valoda
-									</a>
-								</li>
-							</ul>
-						</nav>
-					</button>
-
-					<div class="middle">
-						<form action="" class="search-box" method="post">
-							<input type="text" class="input" name="" value="">
-							<button type="button" class="btn" name="button"></button>
-						</form>
-					</div>
-				</div>
-
-				<button class="button button_color_yellow header__aut" type="button">
-					Авторизация
-				</button>
-
-			</div>
-
-			<div class="header__themes--noactive  header__themes_media_desk">
-				<a class="button header__button-link" href="#">
-					Altcoin
-				</a>
-
-				<a class="button header__button-link" href="#">
-					Binance
-				</a>
-
-				<a class="button header__button-link" href="#">
-					Биткоин
-				</a>
-
-				<a class="button header__button-link" href="#">
-					Блокчейн
-				</a>
-
-				<a class="button header__button-link" href="#">
-					Консенсус
-				</a>
-
-				<a class="button header__button-link" href="#">
-					DeFi
-				</a>
-
-				<a class="button header__button-link header__button-link--big" href="#">
-					Технический анализ
-				</a>
-
-				<a class="button header__button-link header__button-link--big" href="#">
-					Еще+12
-				</a>
-			</div>
-
-			<ul class="menu header__bottom">
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Глоссарий
-					</a>
-				</li>
-
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Викторина
-					</a>
-				</li>
-
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Купить криптовалюту
-					</a>
-				</li>
-
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Запуск токена
-					</a>
-				</li>
-
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Платформа
-					</a>
-				</li>
-
-				<li class="header__item">
-					<a class="link header__link" href="#">
-						Статьи
-					</a>
-				</li>
-			</ul>
-		</div>
-
-		<div class="form">
-			<form action="" class="form__form" method="post">
-				<input class="form__input" type="text" name="text" value="" id="search">
-
-				<button type="button" class="button_form_none form__button" name="button">
-					<svg class="form__svg" width="13" height="13" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#formof"></use>
-					</svg>
-				</button>
-			</form>
-		</div>
-	</header>
-
-
 	<section class="hero">
 		<div class="container hero__container">
 			<h1 class="title title_size_large hero__title">
@@ -497,7 +57,6 @@
 	</section>
 
 	<section class="slider">
-
 		<div class="swiper">
 
 			<div class="swiper-wrapper">
