--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -221,7 +221,7 @@
 		</div>
 	</div>
 
-	<section class="education container education-2">
+	<!-- <section class="education container education-2">
 		<h2 class="text education__title education-2__title">
 			Образовательные статьи
 		</h2>
@@ -581,7 +581,339 @@
 				</button>
 			</nav>
 		</div>
+	</section> -->
+
+	<section class="popular">
+		<div class="container">
+			<div class="popular__top">
+				<h2 class="title title_size_small popular__title">
+					Образовательные статьи
+				</h2>
+			</div>
+
+			<div class="popular__content">
+				<div class="main-card main-card_height_large popular__grid-item1">
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+						<a class="button main-card__tag" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							Технический анализ
+						</a>
+						<a class="button main-card__tag" href="#">
+							+1
+						</a>
+					</div>
+
+					<h2 class="title main-card__title">
+						<a class="link main-card__title-link" href="#">
+							Полное руководство по торговле криптовалютой для начинающих
+						</a>
+					</h2>
+
+					<div class="main-card__info">
+						<p class="text text_size_small main-card__time">
+							63 минуты
+						</p>
+						<a class="link link_level_new" href="#">
+							Новичок
+						</a>
+					</div>
+				</div>
+
+				<div class="main-card popular__grid-item2">
+					<div class="main-card__info">
+						<p class="text text_size_small main-card__time">
+							4 минуты
+						</p>
+						<a class="link link_level_advanced" href="#">
+							Продвинутый
+						</a>
+					</div>
+					<h2 class="title main-card__title">
+						<a class="link main-card__title-link" href="#">
+							12 популярных свечных моделей и паттернов, используемых в техническом анализе
+						</a>
+					</h2>
+					<a class="link main-card__img-link" href="#">
+						<img class="main-card__img main-card__img_size_large" src="assets/images/main/popular/bnb-des.jpg"
+							alt="Логотип биржи binance">
+					</a>
+
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_none">
+						<a class="button main-card__tag" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							+3
+						</a>
+					</div>
+				</div>
+
+				<div class="main-card popular__grid-item3">
+					<div class="main-card__info">
+						<p class="text text_size_small main-card__time">
+							4 минуты
+						</p>
+						<a class="link link_level_advanced" href="#">
+							Продвинутый
+						</a>
+					</div>
+					<h2 class="title main-card__title">
+						<a class="link main-card__title-link" href="#">
+							Как начать работу с Binance Smart за 60 секунд
+						</a>
+					</h2>
+					<a class="link main-card__img-link" href="#">
+						<img class="main-card__img main-card__img_size_large" src="assets/images/main/popular/mean-des.jpg"
+							alt="Логотип биржи binance">
+					</a>
+
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_none">
+						<a class="button main-card__tag" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							+3
+						</a>
+					</div>
+				</div>
+
+				<div class="main-card main-card_height_large popular__grid-item4">
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+						<a class="button main-card__tag" href="#">
+							Binance
+						</a>
+					</div>
+					<h2 class="title main-card__title">
+						<a class="link main-card__title-link" href="#">
+							Что такое усреднение долларовой стоимости (DCA)?
+						</a>
+					</h2>
+					<div class="main-card__info">
+						<p class="text text_size_small main-card__time">
+							6 минут
+						</p>
+						<a class="link link_level_pro" href="#">
+							Продвинутый
+						</a>
+					</div>
+				</div>
+
+				<div class="main-card popular__grid-item5">
+
+					<div class="main-card__info slider__card-info popular__card-info ">
+						<p class="text text_size_small main-card__time">
+							4 минуты
+						</p>
+						<a class="link link_level_new" href="#">
+							Новичек
+						</a>
+					</div>
+
+					<h2 class="title main-card__title popular__main-card-title ">
+						<a class="link main-card__title-link" href="#">
+							История цен биткоина
+						</a>
+					</h2>
+
+					<a class="link main-card__img-link" href="#">
+						<img class="main-card__img main-card__img_size_long" src="assets/images/main/popular/btc.png"
+							alt="Логотип биржи binance">
+					</a>
+
+					<div class="main-card__tag-wrapper  popular__card-tag-wrapper">
+						<a class="button main-card__tag" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							+3
+						</a>
+					</div>
+
+				</div>
+			</div>
+		</div>
 	</section>
+
+	<section class="popular">
+		<div class="container">
+			<div class="popular__content">
+				<div class="main-card main-card_height_large popular__grid-item1">
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+						<a class="button main-card__tag" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							Технический анализ
+						</a>
+						<a class="button main-card__tag" href="#">
+							+1
+						</a>
+					</div>
+
+					<h2 class="title main-card__title">
+						<a class="link main-card__title-link" href="#">
+							Полное руководство по торговле криптовалютой для начинающих
+						</a>
+					</h2>
+
+					<div class="main-card__info">
+						<p class="text text_size_small main-card__time">
+							63 минуты
+						</p>
+						<a class="link link_level_new" href="#">
+							Новичок
+						</a>
+					</div>
+				</div>
+
+				<div class="main-card popular__grid-item2">
+					<div class="main-card__info">
+						<p class="text text_size_small main-card__time">
+							4 минуты
+						</p>
+						<a class="link link_level_advanced" href="#">
+							Продвинутый
+						</a>
+					</div>
+					<h2 class="title main-card__title">
+						<a class="link main-card__title-link" href="#">
+							12 популярных свечных моделей и паттернов, используемых в техническом анализе
+						</a>
+					</h2>
+					<a class="link main-card__img-link" href="#">
+						<img class="main-card__img main-card__img_size_large" src="assets/images/main/popular/bnb-des.jpg"
+							alt="Логотип биржи binance">
+					</a>
+
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_none">
+						<a class="button main-card__tag" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							+3
+						</a>
+					</div>
+				</div>
+
+				<div class="main-card popular__grid-item3">
+					<div class="main-card__info">
+						<p class="text text_size_small main-card__time">
+							4 минуты
+						</p>
+						<a class="link link_level_advanced" href="#">
+							Продвинутый
+						</a>
+					</div>
+					<h2 class="title main-card__title">
+						<a class="link main-card__title-link" href="#">
+							Как начать работу с Binance Smart за 60 секунд
+						</a>
+					</h2>
+					<a class="link main-card__img-link" href="#">
+						<img class="main-card__img main-card__img_size_large" src="assets/images/main/popular/mean-des.jpg"
+							alt="Логотип биржи binance">
+					</a>
+
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_none">
+						<a class="button main-card__tag" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							+3
+						</a>
+					</div>
+				</div>
+
+				<div class="main-card main-card_height_large popular__grid-item4">
+					<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
+						<a class="button main-card__tag" href="#">
+							Binance
+						</a>
+					</div>
+					<h2 class="title main-card__title">
+						<a class="link main-card__title-link" href="#">
+							Что такое усреднение долларовой стоимости (DCA)?
+						</a>
+					</h2>
+					<div class="main-card__info">
+						<p class="text text_size_small main-card__time">
+							6 минут
+						</p>
+						<a class="link link_level_pro" href="#">
+							Продвинутый
+						</a>
+					</div>
+				</div>
+
+				<div class="main-card popular__grid-item5">
+
+					<div class="main-card__info slider__card-info popular__card-info ">
+						<p class="text text_size_small main-card__time">
+							4 минуты
+						</p>
+						<a class="link link_level_new" href="#">
+							Новичек
+						</a>
+					</div>
+
+					<h2 class="title main-card__title popular__main-card-title ">
+						<a class="link main-card__title-link" href="#">
+							История цен биткоина
+						</a>
+					</h2>
+
+					<a class="link main-card__img-link" href="#">
+						<img class="main-card__img main-card__img_size_long" src="assets/images/main/popular/btc.png"
+							alt="Логотип биржи binance">
+					</a>
+
+					<div class="main-card__tag-wrapper  popular__card-tag-wrapper">
+						<a class="button main-card__tag" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__tag" href="#">
+							Основы
+						</a>
+						<a class="button main-card__tag" href="#">
+							+3
+						</a>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</section>
+
+
 
 	<footer class="footer container">
 		<div class="footer__top">
