--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -58,9 +58,7 @@
 
 	<section class="slider">
 		<div class="swiper">
-
 			<div class="swiper-wrapper">
-
 				<div class="swiper-slide">
 					<div class="main-card">
 						<a class="link main-card__img-link" href="#">
@@ -77,6 +75,7 @@
 								Что такое метавселенная?
 							</a>
 						</h2>
+
 						<div class="main-card__info slider__card-info">
 							<p class="text text_size_small main-card__time">
 								4 минуты
@@ -89,7 +88,6 @@
 				</div>
 
 				<div class="swiper-slide">
-
 					<div class="main-card">
 						<a class="link main-card__img-link" href="#">
 							<img class="main-card__img slide__card-img" src="assets/images/main/slider/desktop-img.jpg"
@@ -164,7 +162,7 @@
 		</div>
 
 		<div class="last__content-top">
-			<div class="main-card item1">
+			<div class="main-card last__grid-item1">
 				<a class="link main-card__img-link" href="#">
 					<img class="main-card__img" src="assets/images/main/last/bakanse-desck.jpg"
 						alt="Человек балансирует в воздухе">
@@ -189,7 +187,7 @@
 				</h2>
 			</div>
 
-			<div class="main-card item2">
+			<div class="main-card last__grid-item2">
 				<a class="link main-card__img-link" href="#">
 					<img class="main-card__img" src="assets/images/main/last/porto-desktop.jpg"
 						alt="Человек балансирует в воздухе">
@@ -220,7 +218,7 @@
 				</h2>
 			</div>
 
-			<div class="main-card item3 main-card_height_large">
+			<div class="main-card last__grid-item3 main-card_height_large">
 				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 					<a class="button main-card__tag" href="#">
 						Глоссарий
@@ -244,7 +242,7 @@
 				</a>
 			</div>
 
-			<div class="main-card item4 main-card_height_large">
+			<div class="main-card last__grid-item4 main-card_height_large">
 
 				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 					<a class="button main-card__tag" href="#">
@@ -271,7 +269,7 @@
 				</div>
 			</div>
 
-			<div class="main-card item5 main-card_height_large">
+			<div class="main-card last__grid-item5 main-card_height_large">
 				<div class="main-card__tag-wrapper main-card__tag-wrapper_position_top">
 					<a class="button main-card__tag" href="#">
 						Binance
@@ -635,7 +633,7 @@
 
 
 				<div class="main-card study__main-card study__main-card-glossary">
-					<h2 class="title study-main-card__title">
+					<h2 class="title study-main-card__title study__main-card-title">
 						Что ищем?
 					</h2>
 
@@ -763,102 +761,6 @@
 
 			<button class="button_form_none header__button-lang--hover footer__lang_media" type="button">
 				RU
-				<!-- <nav class="header-nav__menu">
-					<ul class="menu header-nav header-nav_size_smal header-nav_size--lang">
-						<li class="header-nav__item-button">
-							<a class="button header-lang__link-button" href="">
-								English
-							</a>
-						</li>
-
-						<li class="header-nav__item-button">
-							<a class="button header-lang__link-button" href="">
-								Polski
-							</a>
-						</li>
-
-						<li class="header-nav__item-button">
-							<a class="button  header-lang__link-button" href="">
-								繁體中文
-							</a>
-						</li>
-
-						<li class="header-nav__item-button">
-							<a class="button  header-lang__link-button" href="">
-								العربية
-							</a>
-						</li>
-
-						<li class="header-nav__item-button">
-							<a class="button  header-lang__link-button" href="">
-								Русский
-							</a>
-						</li>
-
-						<li class="header-nav__item-button">
-							<a class="button  header-lang__link-button" href="">
-								Türkçe
-							</a>
-						</li>
-
-						<li class="header-nav__item-button">
-							<a class="button  header-lang__link-button" href="">
-								Português
-							</a>
-						</li>
-
-						<li class="header-nav__item-button">
-							<a class="button header-lang__link-button" href="">
-								Svenska
-							</a>
-						</li>
-
-						<li class="header-nav__item-button">
-							<a class="button header-lang__link-button" href="">
-								Bahasa Indonesia
-							</a>
-						</li>
-
-						<li class="header-nav__item-button">
-							<a class="button header-lang__link-button" href="">
-								日本語
-							</a>
-						</li>
-
-						<li class="header-nav__item-button">
-							<a class="button header-lang__link-button" href="">
-								Filipino
-							</a>
-						</li>
-
-						<li class="header-nav__item-button ">
-							<a class="button header-lang__link-button" href="">
-								Українська мова
-							</a>
-						</li>
-
-						<li class="header-nav__item-button ">
-							<a class="button header-lang__link-button" href="">
-								Čeština
-							</a>
-						</li>
-						<li class="header-nav__item-button ">
-							<a class="button header-lang__link-button" href="">
-								Български
-							</a>
-						</li>
-						<li class="header-nav__item-button ">
-							<a class="button header-lang__link-button" href="">
-								اردو
-							</a>
-						</li>
-						<li class="header-nav__item-button ">
-							<a class="button header-lang__link-button" href="">
-								latviešu valoda
-							</a>
-						</li>
-					</ul>
-				</nav> -->
 			</button>
 
 			<p class="text footer__text_media_desktop">
